--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>INFT 1206-11 Home</title>
 </head>
 <body>
+   <header> 
     <h1>INFT 1206-11 Home</h1>
-    <h3>hello</h3>
+    
+   </header> 
+  
+  <hr> 
+  <nav>
+
+  </nav> 
+
+  <hr>
+  
 </body>
 </html>
