final edits part 1

--- a/assignment1/part1/index.html
+++ b/assignment1/part1/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1 Part 1</title>
     <link type="stylesheet" href="./style.css">
-    <style>address{text-align: right};</style>
+    <style>address{text-align: right};</style><!--alignment of the header section-->
 </head>
 <body>
-   <p style="text-align:right;">
+   <p><address>
     <b><i>Dr. Eleanor Gaye</i></b>
     <br>
     <i>
     Awesome Science faculty
     <br>
-    <address>
+    
     University of Awesome
     <br>
     Bobtown, CA 99999,
