last edits part 1

--- a/assignment1/part2/index.html
+++ b/assignment1/part2/index.html
@@ -14,8 +14,8 @@
 <body>
 
   <header>
-    <h1>Birdwatching</h1>
-    <img src="dove.png" alt="a simple dove logo">
+    <h1>Birdwatching</h1><!--main header-->
+    <img src="dove.png" alt="a simple dove logo"><!--logo of the website-->
   
 
   <nav>
@@ -27,11 +27,12 @@
       <li><a href="#">Forum</a></li>
     </ul>
   </nav>
+  <!--these are the navigation buttons-->
   </header>
 
   <main>
-  <article>
-    <h2>Welcome</h2>
+  <article><!--the self-contained composition of the website-->
+    <h2>Welcome</h2><!--second level header-->
 
     <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn
       more
@@ -40,9 +41,9 @@
 
     <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
   </article>
-  <aside>
+  <aside><!--sidebar section of the website-->
     <h2>Favourite photos</h2>
-  <aside>
+  <aside><!--putting in the pictures in the sidebar-->
     <a href="favorite-1.jpg"><img src="favorite-1_th.jpg"
         alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
     <a href="favorite-2.jpg"><img src="favorite-2_th.jpg"
@@ -54,7 +55,7 @@
   </aside>
   </aside>
   </main>
-  <footer>
+  <footer><!--the footer section of the website-->
     <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example
       written by Chris Mills, 2016.</p>
 
