last edit part 2

--- a/assignment1/part2/index.html
+++ b/assignment1/part2/index.html
@@ -55,7 +55,7 @@
   </aside>
   </aside>
   </main>
-  <footer><!--the footer section of the website-->
+  <footer><!--footer section of the website-->
     <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example
       written by Chris Mills, 2016.</p>
 
