--- a/assignment1/part2/index.html
+++ b/assignment1/part2/index.html
@@ -41,7 +41,7 @@
 
     <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
   </article>
-  <aside><!--sidebar section of the website-->
+  <aside><!--the sidebar section of the website-->
     <h2>Favourite photos</h2>
   <aside><!--putting in the pictures in the sidebar-->
     <a href="favorite-1.jpg"><img src="favorite-1_th.jpg"
