--- a/assignment1/part2/index.html
+++ b/assignment1/part2/index.html
@@ -1,3 +1,9 @@
+<!--
+	Name: Mofizul Haque Chowdhury
+	File: index.html
+	Date: 24 January 2024
+	Part 2 of Assignment 1
+-->
 <!DOCTYPE html>
 <html lang="en">
 
