--- a/assignment2/part1/index.html
+++ b/assignment2/part1/index.html
@@ -127,34 +127,27 @@
 
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->              
-        <img src="firefox_logo-only_RGB.png"
-        alt="Firefox Logo"
-        srcset="assignment2/part1/firefox_logo-only_RGB resized 400p.png 400w, assignment2/part1/firefox_logo-only_RGB resized 120p.png 120w"
-        sizes="(max-width: 500px) 120px, 400px">
-
-        <img src="firefox-addons.jpg"
-        alt="firefox addon"
-        srcset="assignment2/part1/firefox-addons resized 400p.jpg 400w, assignment2/part1/firefox-addons resized 120p.jpg 120w"
-        sizes="(max-width: 500px) 120px, 400px">
-
-        <img src="mozilla-dinosaur-head.png"
+        <a href="https://www.mozilla.org/en-US/firefox/new/">
+          <img src="firefox_logo-only_RGB.png"
+          alt="Firefox Logo"
+          srcset="assignment2/part1/firefox_logo-only_RGB resized 400p.png 400w, assignment2/part1/firefox_logo-only_RGB resized 120p.png 120w"
+          sizes="(max-width: 500px) 120px, 400px">
+        </a>
+        <a href="https://www.mozilla.org/">
+          <img src="mozilla-dinosaur-head.png"
         alt="Mozilla addon"
         srcset="assignment2/part1/mozilla-dinosaur-head resized 400p.png 400w, assignment2/part1/firefox_logo-only_RGB resized 120p.png 120w"
         sizes="(max-width: 500px) 120px, 400px">
-
-        
-        
-        <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
-        </a>
-        <a href="https://www.mozilla.org/">
-          <img>
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="firefox-addons.jpg"
+        alt="firefox addon"
+        srcset="assignment2/part1/firefox-addons resized 400p.jpg 400w, assignment2/part1/firefox-addons resized 120p.jpg 120w"
+        sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="mdn.svg"
+        alt ="mdn logo">
         </a>
         <div class="clearfix"></div>
       </div>
