--- a/assignment2/part1/index.html
+++ b/assignment2/part1/index.html
@@ -154,7 +154,7 @@
 
       <div class="red-panda">
         <!-- insert picture element -->
-        <img src="red-panda resized 600p.jpg"
+        <img src="red-panda.jpg"
         alt="red panda image"
         srcset="assignment2/part1/red-panda resized 600p.jpg 600w, assignment2/part1/red-panda resized 1200p.jpg 1200w"
         sizes="(max-width: 600px) 600px, 1200px">
