--- a/assignment2/part1/index.html
+++ b/assignment2/part1/index.html
@@ -106,9 +106,8 @@
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
       
-      <img src="firefox_logo-only_RGB resized 120p.png"
-      alt="firefox logo"
-      >
+      <img src="firefox_logo-only_RGB resized 120p.png" 
+      alt="firefox logo"> <!-- inserted the firefox logo-->
     </header>
 
     <main>
@@ -126,7 +125,7 @@
       </article>
 
       <div class="further-info">
-        <!-- insert images with srcsets and sizes -->              
+        <!-- inserted all images with srcsets and sizes -->              
         <a href="https://www.mozilla.org/en-US/firefox/new/">
           <img src="firefox_logo-only_RGB.png"
           alt="Firefox Logo"
@@ -153,7 +152,7 @@
       </div>
 
       <div class="red-panda">
-        <!-- insert picture element -->
+        <!-- inserted red panda picture-->
         <img src="red-panda.jpg"
         alt="red panda image"
         srcset="assignment2/part1/red-panda resized 600p.jpg 600w, assignment2/part1/red-panda resized 1200p.jpg 1200w"
