--- a/assignment2/part2/blank-template.html
+++ b/assignment2/part2/blank-template.html
@@ -1,3 +1,7 @@
+<!--Mofizul Haque Chowdhury
+    INFT 1206
+    100952733-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -8,6 +12,12 @@
   </head>
   <body>
     <h1>Table template</h1>
+    <table>
+
+
+
+
+    </table>
 
 
   </body>
