--- a/assignment2/part2/blank-template.html
+++ b/assignment2/part2/blank-template.html
@@ -15,6 +15,90 @@
     <table>
       <caption>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
       </caption>
+
+      <tr>
+        <td colspan="4"></td>
+        <th>Name</th>
+        <th>Mass (10<sup>24</sup>kg)</td>
+        <th>Diameter (km)</th>
+        <th>Density (kg/m<sup>3</sup>)</th>
+        <th>Gravity (m/s<sup>2</sup>)</th>
+        <th>Length of day (hours)</th>
+        <th>Distance from Sun (10<sup>6</sup>km)</th>
+        <th>Mean temperature (°C)</th>
+        <th>Number of moons</th>
+        <th>Notes</th>
+      </tr>
+
+      <tr>
+        <th colspan="4" rowspan="4">Terrestrial planets</th>
+        <th>Mercury</th>
+        <td>0.330</td>
+        <td>4,879</td>
+        <td>5427</td>
+        <td>3.7</td>
+        <td>4222.6</td>
+        <td>57.9</td>
+        <td>167</td>
+        <td>0</td>
+        <td>Closest to the Sun</td>
+      </tr>
+      <tr>
+        <th>Venus</th>
+        <td>4.87</td>
+        <td>12,104</td>
+        <td>5243</td>
+        <td>8.9</td>
+        <td>2802.0</td>
+        <td>108.2</td>
+        <td>464</td>
+        <td>0</td>
+        <td></td>
+      </tr>
+      <tr>
+        <th>Earth</th>
+        <td>5.97</td>
+        <td>12,756</td>
+        <td>5514</td>
+        <td>9.8</td>
+        <td>24.0</td>
+        <td>149.6</td>
+        <td>15</td>
+        <td>1</td>
+        <td>Our world</td>
+      </tr>
+      <tr>
+        <th>Mars</th>
+        <td>0.642</td>
+        <td>6,792</td>
+        <td>3933</td>
+        <td>3.7</td>
+        <td>24.7</td>
+        <td>227.9</td>
+        <td>-65</td>
+        <td>2</td>
+        <td>The red planet</td>
+      </tr>
+
+      <tr>
+        <th colspan="3" rowspan="2">Jovian planets</th>
+        <th>Gas Giants</th>
+        <th>Jupiter</th>
+        <td>1898</td>
+        <td>142,984</td>
+        <td>1326</td>
+        <td>23.1</td>
+        <td>9.9</td>
+        <td>778.6</td>
+        <td>-110</td>
+        <td>67</td>
+        <td>The largest planet</td>
+      </tr>
+
+      <tr>
+        <th>Ice Giants</th>
+      </tr>
+      
         
 
 
