--- a/assignment2/part2/blank-template.html
+++ b/assignment2/part2/blank-template.html
@@ -15,6 +15,10 @@
     <table>
       <caption>Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
       </caption>
+      <colgroup>
+        <col span="4">
+        <col style="border: 2px solid black">
+      </colgroup>
 
       <tr>
         <td colspan="4"></td>
