--- a/assignment2/part2/blank-template.html
+++ b/assignment2/part2/blank-template.html
@@ -18,10 +18,10 @@
       <colgroup>
         <col span="4">
         <col style="border: 2px solid black">
-      </colgroup>
+      </colgroup> <!--put the border-->
 
       <tr>
-        <td colspan="4"></td>
+        <td colspan="4"></td> <!--all column names-->
         <th>Name</th>
         <th>Mass (10<sup>24</sup>kg)</td>
         <th>Diameter (km)</th>
@@ -35,7 +35,7 @@
       </tr>
 
       <tr>
-        <th colspan="4" rowspan="4">Terrestrial planets</th>
+        <th colspan="4" rowspan="4">Terrestrial planets</th><!--making the right size-->
         <th>Mercury</th>
         <td>0.330</td>
         <td>4,879</td>
@@ -155,13 +155,6 @@
 
 
       </tr>
-      
-        
-
-
-
-    </table>
-
-
+      </table>
   </body>
 </html>
