--- a/assignment3/part1/biog-download.html
+++ b/assignment3/part1/biog-download.html
@@ -22,7 +22,7 @@
 
       h2 {
         font-style: italic;
-        font-size: 1.5em;
+        
       }
 
       ul{
@@ -43,6 +43,7 @@
 
       a:hover {
         text-decoration: none;
+        color: green;
       }
     </style>
   </head>
