--- a/assignment3/part1/biog-download.html
+++ b/assignment3/part1/biog-download.html
@@ -13,13 +13,15 @@
         margin: 0;
       }
 
+      <!--h1 edits-->
       h1 {
-        color: hotpink;
+        color: hotpink; 
         font-size: 2em;
         font-family: Georgia, "Times New Roman", Times, serif;
         border-bottom: 10px dotted purple;
       }
 
+      <
       h2 {
         font-style: italic;
         
