--- a/assignment3/part1/biog-download.html
+++ b/assignment3/part1/biog-download.html
@@ -49,7 +49,7 @@
   </head>
 
   <body>
-    <h1>Mofizul Haque Chowdhury</h1>
+    <h1>Mofizul Haque Chowdhury</h1> <!--name change-->
     <div class="job-title">Web Developer</div>
     <p>
       Far far away, behind the word mountains, far from the countries Vokalia
