--- a/assignment3/part3/index.html
+++ b/assignment3/part3/index.html
@@ -70,12 +70,14 @@
   <nav>
 
     <ul>
+     <div class="container">
       <li><a href="#">Home</a></li>
       <li><a href="#">Finding us</a></li>
       <li><a href="#">Courses</a></li>
       <li><a href="#">Staff</a></li>
       <li><a href="#">Media</a></li>
       <li><a href="#">Prospectus</a></li>
+    </div>  
     </ul>
 
   </nav>
